<resources>
    <string name="app_name">LMS</string>
    <string name="title_activity_main21">Main2Activity1</string>
    <string name="title_activity_main32">Main3Activity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Name1</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Todo">TODO</string>
    <string name="name1">Name</string>
    <string name="E__mail">E-mail</string>
    <string name="Contact_no">Contact No.</string>
    <string name="Address">Address</string>
    <string name="submit">submit</string>
    <string name="pwd">password</string>
    <string name="contact_no">Contact No.</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password1">password</string>
    <string name="address">Address</string>
    <string name="city">city</string>
    <string name="sub">Submit</string>
    <string name="next">Next</string>
    <string name="Next1">Next</string>
    <string name="b1">TODO</string>
    <string name="b2">TODO</string>
    <string name="b3">TODO</string>
    <string name="b4">TODO</string>
    <string name="b5">TODO</string>
    <string name="b6">TODO</string>
    <string name="but4">previous</string>
    <string name="but5">Next</string>
    <string name="e1">TODO</string>
    <string name="e2">TODO</string>
    <string name="e3">TODO</string>
    <string name="e4">TODO</string>
    <string name="e5">TODO</string>
    <string name="e6">TODO</string>
    <string name="but6">privious</string>
    <string name="but7">Next</string>
    <string name="bangles1">TextView</string>
    <string name="bangles2">Bangles2</string>
    <string name="bangles3">Bangles1</string>
    <string name="bangles4">Bangles3</string>
    <string name="bangles5">Bangles4</string>
    <string name="bangle6">Bangles5</string>
    <string name="bangles7">Bangles6</string>
    <string name="bangles">Bangles</string>
    <string name="bangles8">BANGLES</string>
    <string name="rs_2000">Rs.2000</string>
    <string name="rs_47700">Rs.47700</string>
    <string name="rs_52000">Rs.52000</string>
    <string name="rs_47289">Rs.47289</string>
    <string name="rs_42000">Rs.42000</string>
    <string name="rs_54000">Rs.54000</string>
    <string name="earings1">Earings1</string>
    <string name="earing2">Earing2</string>
    <string name="earing3">Earing3</string>
    <string name="earings4">Earings4</string>
    <string name="earing5">Earing5</string>
    <string name="earings6">Earings6</string>
    <string name="rs_50000">Rs.50000</string>
    <string name="rs_500001">Rs.50000</string>
    <string name="rs_500002">Rs.50000</string>
    <string name="rs_500003">Rs.50000</string>
    <string name="rs_500004">Rs.50000</string>
    <string name="rs_500005">Rs.50000</string>
    <string name="earing6">EARING</string>
    <string name="ring1">Ring1</string>
    <string name="ring2">Ring2</string>
    <string name="ring3">Ring3</string>
    <string name="ring4">TODO</string>
    <string name="ring5">Ring4</string>
    <string name="ring6">Ring5</string>
    <string name="ring7">Ring6</string>
    <string name="rs_10000">Rs.10000</string>
    <string name="rs_15000">Rs.15000</string>
    <string name="rs_30000">Rs.30000</string>
    <string name="rs_25000">Rs.25000</string>
    <string name="rs_35000">Rs.35000</string>
    <string name="rs_23000">Rs.23000</string>
    <string name="menu">MENU</string>
    <string name="menu1">Menu</string>
    <string name="logout">Logout</string>
    <string name="menu3">MENU</string>
    <string name="logout2">Logout</string>
    <string name="select_categories1">SELECT CATEGORIES</string>
    <string name="select_categories">SELECT CATEGORIES</string>
    <string name="select_categories3">SELECT CATEGORIES</string>
    <string name="todo4">TODO</string>
    <string name="select_categories6">SELECT CATEGORIES</string>
    <string name="select_categories5">SELECT CATEGORIES</string>
    <string name="ringbut">RING</string>
    <string name="banglesbut">BANGLES</string>
    <string name="search">SEARCH</string>
    <string name="earing">EARING</string>
    <string name="earingsbut">EARINGS</string>
    <string name="menu2">MENU</string>
    <string name="product_entry">product Entry</string>
    <string name="view_orders">View orders</string>
    <string name="product_entry2">PRODUCT ENTRY</string>
    <string name="logout3">LOGOUT</string>
    <string name="todo5">TODO</string>
    <string name="select_categories8">SELECT CATEGORIES</string>
    <string name="register_page1">REGISTER PAGE</string>
    <string name="logout4">LOGOUT</string>
    <string name="menu4">MENU</string>
    <string name="product_entry4">PRODUCT ENTRY</string>
    <string name="view_orders4">VIEW ORDERS</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="product_entry1">PRODUCT ENTRY</string>
    <string name="product_id1">Product id</string>
    <string name="product_name1">Product Name</string>
    <string name="select_image1">Select image</string>
    <string name="price1">Price</string>
    <string name="submit1">Submit</string>
    <string name="ring9">RING</string>
    <string name="name11">Name</string>
    <string name="username12">Username</string>
    <string name="address11">Address</string>
    <string name="contact_no11">Contact No.</string>
    <string name="e_mail11">E-mail</string>
    <string name="register_page11">REGISTER PAGE</string>
    <string name="todo9">TODO</string>
    <string name="ring11">Ring</string>
    <string name="earing11">EARING</string>
    <string name="bangle11">Bangle</string>
    <string name="email12">Email</string>
    <string name="contact_no12">Contact No.</string>
    <string name="address12">Address</string>
    <string name="name12">Name</string>
    <string name="product_entry11">product Entry</string>
    <string name="product_name11">product Name</string>
    <string name="product_id11">product Id</string>
    <string name="select_image11">Select image</string>
    <string name="price11">price</string>
    <string name="earing12">Earing</string>
    <string name="todo12">TODO</string>
    <string name="todo23">TODO</string>


</resources>
