<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.admin.lms.Main4Activity3">

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="108dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="93dp"
        android:layout_toEndOf="@+id/space"
        android:layout_toRightOf="@+id/space"
        android:contentDescription="@string/b1"
        app:srcCompat="@drawable/b1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/imageView6"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/b2"
        app:srcCompat="@drawable/b2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView7"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:contentDescription="@string/b3"
        app:srcCompat="@drawable/b3" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:layout_below="@+id/imageView6"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/b4"
        app:srcCompat="@drawable/b4" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7"
        android:layout_alignTop="@+id/imageView11"
        android:contentDescription="@string/b5"
        app:srcCompat="@drawable/b5" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/imageView8"
        android:layout_alignRight="@+id/imageView8"
        android:layout_alignTop="@+id/imageView12"
        android:contentDescription="@string/b6"
        app:srcCompat="@drawable/b6" />

    <Button
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toLeftOf="@+id/imageView12"
        android:layout_toStartOf="@+id/imageView12"
        android:onClick="me2"
        android:text="@string/menu1" />

    <Button
        android:id="@+id/etLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView13"
        android:layout_alignStart="@+id/imageView13"
        android:layout_alignTop="@+id/menu2"
        android:onClick="log"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView11"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/bangles1" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:text="@string/bangles3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview4"
        android:layout_alignBottom="@+id/textview4"
        android:layout_centerHorizontal="true"
        android:text="@string/bangles2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignEnd="@+id/textView14"
        android:layout_alignRight="@+id/textView14"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/bangles4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview4"
        android:layout_alignStart="@+id/textview4"
        android:layout_below="@+id/imageView11"
        android:layout_marginTop="21dp"
        android:text="@string/bangles5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:text="@string/bangle6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:text="@string/bangles7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView5"
        android:layout_marginTop="22dp"
        android:text="@string/bangles8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textview4"
        android:layout_alignRight="@+id/textview4"
        android:layout_below="@+id/textview4"
        android:text="@string/rs_2000" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/rs_47700" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etLogout"
        android:layout_alignRight="@+id/etLogout"
        android:layout_below="@+id/textView6"
        android:text="@string/rs_52000" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu2"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:text="@string/rs_47289" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu2"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:text="@string/rs_42000" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:text="@string/rs_54000" />

</RelativeLayout>
