<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.admin.lms.Main5Activity4">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/e1"
        app:srcCompat="@drawable/e1" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/imageView14"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/imageView14"
        android:layout_toRightOf="@+id/imageView14"
        android:contentDescription="@string/e2"
        app:srcCompat="@drawable/e2" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/imageView15"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/imageView15"
        android:layout_toRightOf="@+id/imageView15"
        android:contentDescription="@string/e3"
        app:srcCompat="@drawable/e3" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView14"
        android:layout_alignStart="@+id/imageView14"
        android:layout_below="@+id/imageView14"
        android:layout_marginTop="77dp"
        android:contentDescription="@string/e4"
        app:srcCompat="@drawable/e4" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView15"
        android:layout_alignStart="@+id/imageView15"
        android:layout_alignTop="@+id/imageView17"
        android:contentDescription="@string/e5"
        app:srcCompat="@drawable/e5" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView18"
        android:contentDescription="@string/e6"
        app:srcCompat="@drawable/e6" />

    <Button
        android:id="@+id/menu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView17"
        android:layout_alignRight="@+id/imageView17"
        android:layout_below="@+id/textView26"
        android:layout_marginTop="18dp"
        android:onClick="me3"
        android:text="@string/menu3" />

    <Button
        android:id="@+id/etLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/menu3"
        android:layout_alignBottom="@+id/menu3"
        android:layout_alignLeft="@+id/imageView19"
        android:layout_alignStart="@+id/imageView19"
        android:onClick="log"
        android:text="@string/logout2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu3"
        android:layout_alignStart="@+id/menu3"
        android:layout_below="@+id/imageView14"
        android:layout_marginTop="16dp"
        android:text="@string/earings1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView18"
        android:layout_alignStart="@+id/imageView18"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/earing2" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/imageView19"
        android:layout_alignStart="@+id/imageView19"
        android:text="@string/earing3" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu3"
        android:layout_alignStart="@+id/menu3"
        android:layout_below="@+id/imageView17"
        android:layout_marginTop="22dp"
        android:text="@string/earings4" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignLeft="@+id/imageView18"
        android:layout_alignStart="@+id/imageView18"
        android:text="@string/earing5" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignEnd="@+id/imageView16"
        android:layout_alignRight="@+id/imageView16"
        android:text="@string/earings6" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/rs_50000" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:text="@string/rs_50000" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:text="@string/rs_500002" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="211dp"
        android:layout_toEndOf="@+id/textView18"
        android:layout_toRightOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView22"
        android:layout_alignRight="@+id/textView22"
        android:layout_below="@+id/textView19"
        android:text="@string/rs_500003" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:layout_below="@+id/textView20"
        android:text="@string/rs_500004" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView16"
        android:layout_alignRight="@+id/imageView16"
        android:layout_below="@+id/textView21"
        android:text="@string/rs_500005" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/imageView15"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView15"
        android:layout_marginTop="25dp"
        android:text="@string/earing6" />
</RelativeLayout>
